同步于: 10月12日23时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -17,12 +17,12 @@
 #### [ 【新闻看点】习遭中共“劫持”？普京有心病](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843372.md)
 #### [ 上海市长夫人刘茶出殡 传为刘鹤同父异母妹妹(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018909.md)
 #### [ 习连任未必板上钉钉 二十大主席团或成翻盘推手？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018673.md)
+#### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
 #### [ “废太子”胡春华与习近平为二十一大埋下的伏笔](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661425.md)
 #### [ 中共黑箱内幕消息靠谱吗？ 二十大前专家解析](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843413.md)
-#### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
 #### [ 二十大入常大热门是他 原招行行长“双开”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661134.md)
-#### [ 分析：习近平面临“惊险一跳” 二十大藏变数](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103548503.md)
 #### [ 中共黑箱内幕消息靠谱吗？ 二十大前专家解析](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13843413.md)
+#### [ 分析：习近平面临“惊险一跳” 二十大藏变数](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103548503.md)
 #### [ 章天亮: 二十大前防疫再升级 习近平否定邓路线](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661350.md)
 #### [ 七中全会三大关注点 中共百字通报诡异](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13842488.md)
 #### [ 中共专题片披露 习的批示在陕西官场空转](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843071.md)
@@ -46,8 +46,8 @@
 #### [ 二十大召开前夕 多省代表进京前集中培训(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018702.md)
 #### [ 官媒再点铁帽子王 二十大如大战 习将冠人民领袖？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549253.md)
 #### [ 二十大前党媒为中共清零背书 评论区一片骂声 微博急降热搜](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661401.md)
-#### [ 疫情拉中国经济陪葬 传北京全聚德关门 投资百万老板逃跑(视频/图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018775.md)
+#### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
 #### [ 二十大前 中共政治局常委传出“四老三新”版本](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549408.md)
+#### [ 疫情拉中国经济陪葬 传北京全聚德关门 投资百万老板逃跑(视频/图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018775.md)
 #### [ 二十大前网络严管 “变天”“熊头”都不能发](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661092.md)
 #### [ 专家：结束清零 中国消费模式也难恢复](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13842825.md)
-#### [ 习近平握紧“刀把子” 二十大政法委书记人选浮出](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549394.md)
