--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -3,9 +3,9 @@
 #### [ 影射赵乐际？二十大前专题片点名涉秦岭别墅案官员(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018848.md)
 #### [ 旧部重回中纪委 王岐山仍有政治影响力？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018838.md)
 #### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
+#### [ 十年间 习近平是如何巩固与积累权力的(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018931.md)
 #### [ 二十大关乎班子、旗帜、道路“三定”之会 (图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018749.md)
 #### [ 总理接班人扑朔迷离 沧桑废太子“满血复活”？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018821.md)
-#### [ 十年间 习近平是如何巩固与积累权力的(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018931.md)
 #### [ 中纪委七中全会内斗激烈？会议公报空前简短透端倪(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018759.md)
 #### [ 习连任成定局？太子党对习不满 但无法抱团(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018737.md)
 #### [ 二十大是场大戏 专家分析：习连任国际格局大变(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018739.md)
@@ -16,38 +16,38 @@
 #### [ “废太子”胡春华与习近平为二十一大埋下的伏笔](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661425.md)
 #### [ 中共黑箱内幕消息靠谱吗？ 二十大前专家解析](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843413.md)
 #### [ 章天亮: 二十大前防疫再升级 习近平否定邓路线](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661350.md)
-#### [ 【晚间新闻】二十大倒计时 北京风声鹤唳](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843305.md)
 #### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
+#### [ 【晚间新闻】二十大倒计时 北京风声鹤唳](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843305.md)
 #### [ 二十大前 又一个危机浮现](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661320.md)
 #### [ 【中国观察】官方捧习防疫政绩 释何风向 ？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13843166.md)
-#### [ 江峰: 万名军警拱卫 党媒军报乱阵脚 二十大如大战在即](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661365.md)
 #### [ 专家：中国经济畸形发展 下坠速度让世界吃惊](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843202.md)
 #### [ 二十大前 中共政治局常委传出“四老三新”版本](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549408.md)
+#### [ 江峰: 万名军警拱卫 党媒军报乱阵脚 二十大如大战在即](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661365.md)
+#### [ 【中国观察】官方捧习防疫政绩 释何风向 ？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843166.md)
 #### [ 上海市长龚正夫人葬礼 刘鹤送花圈传为其妹](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549203.md)
 #### [ 二十大前党媒为中共清零背书 评论区一片骂声 微博急降热搜](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661401.md)
-#### [ 【中国观察】官方捧习防疫政绩 释何风向 ？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843166.md)
 #### [ 官媒再点铁帽子王 二十大如大战 习将冠人民领袖？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549253.md)
 #### [ 习近平握紧“刀把子” 二十大政法委书记人选浮出](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549394.md)
 #### [ 【秦鹏直播】党媒密集挺“清零” 上海水荒来了](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843242.md)
 #### [ 【一线采访】汕尾发生恶性砍人案 或报复社会](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843023.md)
 #### [ 王岐山将参加亚信峰会 能否出席20大引关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843231.md)
-#### [ 系好安全带 中共真正的大清洗就要开始](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661194.md)
-#### [ 20大前打“裸官”分析：中共官员随时出逃](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13842914.md)
-#### [ 上海人慌了！长江几近断流 水库枯竭 海水倒灌 上海供水危急](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661314.md)
-#### [ 中共调整住房公积金救市 分析：杯水车薪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843515.md)
 #### [ 【热门话题】中共政治局常委“四老三新”版本/上海水荒来了](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549433.md)
-#### [ 习的统治何时是尽头？泽连斯基演讲有启迪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661494.md)
+#### [ 系好安全带 中共真正的大清洗就要开始](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661194.md)
+#### [ 上海人慌了！长江几近断流 水库枯竭 海水倒灌 上海供水危急](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661314.md)
 #### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
+#### [ 20大前打“裸官”分析：中共官员随时出逃](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13842914.md)
+#### [ 习的统治何时是尽头？泽连斯基演讲有启迪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661494.md)
+#### [ 中共调整住房公积金救市 分析：杯水车薪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843515.md)
 #### [ 二十大 李克强继任者4种可能与释放的信号](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13842649.md)
+#### [ 【江峰漫谈】大批军警护中南海 20大如大战在即](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843187.md)
 #### [ 美新禁令暗藏一绝招 中共难获芯片技术人才](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13843315.md)
 #### [ 二十大主席团要出手？反习派大战中宣部](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661221.md)
-#### [ 【江峰漫谈】大批军警护中南海 20大如大战在即](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843187.md)
+#### [ 中共专题片披露 习的批示在陕西官场空转](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843071.md)
+#### [ 七中全会公报 高调吹捧习近平](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549523.md)
 #### [ 中纪委前官员历数赵乐际几大罪状](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549411.md)
+#### [ 乌克兰打出威风！中共吓的装“孙子” 被美国打脸(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999615.md)
 #### [ 深圳首现BF.7变异株 被控市民崩溃质问“下一代要不要活”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018852.md)
 #### [ 传咸潮致水质超标 上海市民不信官方辟谣](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843449.md)
-#### [ 乌克兰打出威风！中共吓的装“孙子” 被美国打脸(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999615.md)
 #### [ 邱国正：中共第一击 国军自卫反击后就是开战](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843607.md)
-#### [ 七中全会公报 高调吹捧习近平](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549523.md)
 #### [ 二十大前 又一个危机浮现](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/661320.md)
-#### [ 十九届七中全会登场 重点“三明一暗”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018704.md)
-#### [ 中共专题片披露 习的批示在陕西官场空转](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843071.md)
+#### [ 中共20大──从渐进衰败到终极崩溃(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p4/1018889.md)
