--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -20,8 +20,8 @@
 #### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
 #### [ 二十大前 中共政治局常委传出“四老三新”版本](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549408.md)
 #### [ 【晚间新闻】二十大倒计时 北京风声鹤唳](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843305.md)
-#### [ 二十大前 又一个危机浮现](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661320.md)
 #### [ 七中全会公报全面捧习 分析指中共危机四伏](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843828.md)
+#### [ 二十大前 又一个危机浮现](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661320.md)
 #### [ 【中国观察】官方捧习防疫政绩 释何风向 ？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13843166.md)
 #### [ 专家：中国经济畸形发展 下坠速度让世界吃惊](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843202.md)
 #### [ 【中国观察】官方捧习防疫政绩 释何风向 ？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843166.md)
@@ -36,9 +36,9 @@
 #### [ 七中全会公报 高调吹捧习近平](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549523.md)
 #### [ 岳山：二十大前习整军诡秘 涉三大原因](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843759.md)
 #### [ 【一线采访】汕尾发生恶性砍人案 或报复社会](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843023.md)
+#### [ 习“失踪”式统治术 分析：与政治制度相关](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843806.md)
 #### [ 【秦鹏直播】党媒密集挺“清零” 上海水荒来了](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843242.md)
 #### [ 习的统治何时是尽头？泽连斯基演讲有启迪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661494.md)
-#### [ 习“失踪”式统治术 分析：与政治制度相关](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843806.md)
 #### [ 王岐山将参加亚信峰会 能否出席20大引关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843231.md)
 #### [ 反习派未有大动作？矢板明夫：习有3颗“定时炸弹”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549684.md)
 #### [ 系好安全带 中共真正的大清洗就要开始](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661194.md)
@@ -49,5 +49,5 @@
 #### [ 美新禁令暗藏一绝招 中共难获芯片技术人才](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13843315.md)
 #### [ 中纪委前官员历数赵乐际几大罪状](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549411.md)
 #### [ 【江峰漫谈】大批军警护中南海 20大如大战在即](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843187.md)
+#### [ 中共20大──从渐进衰败到终极崩溃(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p4/1018889.md)
 #### [ 习近平在下一盘很大的棋 接近二十大疫情反常升级(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p4/1018879.md)
-#### [ 深圳首现BF.7变异株 被控市民崩溃质问“下一代要不要活”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018852.md)
