同步于: 10月14日13时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -12,10 +12,10 @@
 #### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
 #### [ 二十大关乎班子、旗帜、道路“三定”之会 (图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018749.md)
 #### [ 二十大前夕 党媒称防疫“绝不能躺平”被批](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843331.md)
-#### [ 二十大后习近平权力如何分配 专家简析](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843991.md)
 #### [ 二十大前北京男巨幅抗议被抓 图集疯传 全网封杀(视频/图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019028.md)
-#### [ 二十大前北京市区现抗议标语 照片和视频热传](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103550320.md)
+#### [ 二十大后习近平权力如何分配 专家简析](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843991.md)
 #### [ 北京四通桥有人放喇叭挂横幅 “要吃饭要自由要选票”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018992.md)
+#### [ 二十大前北京市区现抗议标语 照片和视频热传](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103550320.md)
 #### [ 四川共青团献忠？支持“杀人建议”引发舆论哗然(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018973.md)
 #### [ 习二十大连任？矢板明夫：他怀抱3定时炸弹](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843975.md)
 #### [ 【一线采访】北京惊现反党横幅 中共全网封杀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13844506.md)
@@ -23,31 +23,31 @@
 #### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
 #### [ 习“失踪”式统治术 分析：与政治制度相关](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843806.md)
 #### [ 【新闻看点】七中确立两核心 新常委四老三新？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844084.md)
+#### [ 中共黑箱内幕消息靠谱吗？ 二十大前专家解析](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13843413.md)
 #### [ 北京挂反共标语勇士被捕 王丹：他是新坦克人](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844777.md)
 #### [ 谁将接替李克强？日本专家：胡春华有机会](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844060.md)
-#### [ 中共黑箱内幕消息靠谱吗？ 二十大前专家解析](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13843413.md)
 #### [ 岳山：二十大前习整军诡秘 涉三大原因](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843759.md)
+#### [ 【秦鹏直播】北京反共勇士 真实身份曝光](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844713.md)
 #### [ 中共卫健委称整治层层加码 评论区翻车](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844481.md)
 #### [ 【一线采访】北京惊现反党横幅 中共全网封杀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844506.md)
-#### [ 【秦鹏直播】北京反共勇士 真实身份曝光](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844713.md)
 #### [ 北京四通桥挂横幅的人是谁 个人信息流出](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844816.md)
 #### [ 递补中央委员异常 之江新军被跳过 捧习者占位](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844507.md)
 #### [ 北京惊现抗议横幅“有个勇敢的人”被屏蔽](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844650.md)
 #### [ 分析：七中全会或因动态清零爆内斗](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844398.md)
 #### [ 中纪委七中全会内斗激烈？会议公报空前简短透端倪(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018759.md)
 #### [ 王永康落选中央委员 传犯习近平大忌](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549998.md)
+#### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
 #### [ 【热门话题】红二代透中国灭顶之灾/北京市区现抗议标语](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103550376.md)
 #### [ 七中全会公报全面捧习 分析指中共危机四伏](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843828.md)
 #### [ 反习派未有大动作？矢板明夫：习有3颗“定时炸弹”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549684.md)
 #### [ 二十大后谁任总理 七中全会公报释信号](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103550413.md)
-#### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
 #### [ 军方表明态度？党媒掐架 七中全会剑拔弩张？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/661647.md)
 #### [ 习在重大问题上“隐身”统治术 被指现象怪异](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103550284.md)
 #### [ 中共各派围绕中纪委书记人选角力](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844330.md)
 #### [ 深圳清零封控居民受不了 上街抗议喊解封(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019042.md)
+#### [ 【财商天下】有钱没钱都是韭菜 不“润”还等什么？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844028.md)
 #### [ 美权威教授：20大后习如何指挥经济团队](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843341.md)
 #### [ 陆媒报导中共二十大代表进京 关闭评论区](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844272.md)
-#### [ 【财商天下】有钱没钱都是韭菜 不“润”还等什么？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844028.md)
 #### [ 不满中共铁腕防疫 黄安飙骂大白差点被逮](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844860.md)
 #### [ 【晚间新闻】兰州蛮横清零 习握保权三炸弹？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844470.md)
-#### [ 郑州新规定令人不敢置信 1天2检民戏“掉头去队末”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018972.md)
+#### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
