同步于: 10月14日19时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -49,5 +49,5 @@
 #### [ 反习派未有大动作？矢板明夫：习有3颗“定时炸弹”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103549684.md)
 #### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
 #### [ 【天亮时分】七中全会公报 揭盅习近平是否连任](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844697.md)
+#### [ 四通桥事件后胡锡进英文发推遭打脸](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662175.md)
 #### [ 习在重大问题上“隐身”统治术 被指现象怪异](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103550284.md)
-#### [ 中共执意清零 百姓无生计来源 直呼崩溃](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844738.md)
